--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "airtable": "^0.10.0",
-    "next": "9.5.5",
+    "babel-plugin-styled-components": "^1.11.1",
+    "next": "^10.0.0",
     "react": "16.14.0",
-    "react-dom": "16.14.0"
+    "react-dom": "16.14.0",
+    "styled-components": "^5.2.1"
   }
 }
