--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "^10.0.0",
     "react": "16.14.0",
     "react-dom": "16.14.0",
+    "sass": "^1.30.0",
     "styled-components": "^5.2.1"
   }
 }
