--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "16.14.0",
     "react-slick": "^0.27.13",
     "sass": "^1.30.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.1"
   }
 }
