--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "airtable": "^0.10.0",
     "babel-plugin-styled-components": "^1.11.1",
-    "next": "^10.0.0",
+    "downshift": "^6.1.3",
+    "next": "^10.1.3",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-slick": "^0.27.13",
